# python-testing-homework

./: .bash_history  .dockerignore  .gitignore  .importlinter  Dockerfile  Makefile  README.md  db.json  docker-compose.override.yml  docker-compose.yml  fast-pytest  fast-pytest-setup.cfg  pyproject.toml  setup.cfg  vscode-lint-and-types.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: .env.template  settings.py
data/: db.json  delay.middleware.js
db/: db.json  routes.json
docker/: docker-compose.prod.yml
docker/caddy/: ci.sh
docker/django/: Dockerfile  ci.sh  entrypoint.sh  gunicorn.sh  smoke.sh
docker/json-server/: Dockerfile  db.json  routes.json
docker/jsonserver/: db.json  routes.json
docs/: conf.py
docs/_templates/: moreinfo.html
docs/pages/project/: glossary.rst
docs/pages/template/: development.rst  linters.rst  overview.rst  production-checklist.rst  production.rst
protocols/identity/: user.py
scripts/: create_dev_database.sql
server/: urls.py
server/apps/identity/: admin.py  container.py  models.py  urls.py
server/apps/identity/migrations/: 0001_initial.py  0002_alter_user_date_of_birth.py  0002_null_date_of_birth.py
server/apps/identity/views/: login.py  user.py
server/apps/pictures/: admin.py  container.py  models.py  urls.py  views.py
server/apps/pictures/migrations/: 0001_initial.py
server/common/: pydantic_model.py
server/common/django/: admin.py  decorators.py  forms.py  models.py  types.py
server/common/services/: http.py
server/settings/: __init__.py
server/settings/components/: common.py  csp.py  identity.py  placeholder.py
server/settings/environments/: development.py  production.py
tests/: conftest.py  mocks.py  test_tests.py  utils.py
tests/fixtures/: db.json
tests/plugins/: base.py  constants.py  django_settings.py  mimesis_fake.py  slow.py
tests/plugins/assertions/: user.py
tests/plugins/common/: admin_client_app.py  json_server.py
tests/plugins/external_services/: external.py
tests/plugins/identity/: asserts.py  factories.py  fixtures.py  identity.py  login.py  pytest_identity.py  registration.py  user.py  user_factory.py  user_update.py  users.py
tests/plugins/mocks/: api_lead.py  identity.py  pictures.py  user.py
tests/plugins/pictures/: picture.py  pictures.py  pytest_pictures.py
tests/test_apps/: conftest.py
tests/test_apps/test_identity/: __init__.py  conftest.py  test_1.py  test_auth.py  test_create_user.py  test_identify.py  test_identity_models.py  test_identity_urls.py  test_indentity_user_url.py  test_lead.py  test_login.py  test_model.py  test_models.py  test_placeholder.py  test_register.py  test_registration.py  test_signup.py  test_templates.py  test_update.py  test_update_user.py  test_urls.py  test_usecases.py  test_user.py  test_user_create.py  test_user_create_new.py  test_user_login.py  test_user_model.py  test_user_update.py  test_valid_registration.py  test_views.py
tests/test_apps/test_identity/login/: conftest.py  test_login.py
tests/test_apps/test_identity/registration/: conftest.py  test_registration.py
tests/test_apps/test_identity/test_views/: test_login.py  test_registration.py
tests/test_apps/test_identity/user_update/: conftest.py  test_user_update.py
tests/test_apps/test_identity/views/: test_login.py  test_user.py
tests/test_apps/test_pictures/: conftest.py  test_1.py  test_dashboard.py  test_dashboard_view.py  test_dashbord.py  test_external_pictures.py  test_favorites.py  test_favourite_list.py  test_favourite_pictures_view.py  test_favourites.py  test_forms.py  test_infrastructure.py  test_json_mocked_pictures.py  test_mock_http_pictures.py  test_model.py  test_models.py  test_picture_fetch.py  test_picture_models.py  test_pictures.py  test_pictures_logic.py  test_pictures_models.py  test_pictures_templates.py  test_pictures_url.py  test_pictures_views.py  test_urls.py  test_usecases.py  test_views.py
tests/test_apps/test_pictures/dashboard/: conftest.py  (+1 more)
tests/test_server/: test_common_templates.py  test_urls.py
(+42 files in other folders)
